# personal-blog

./: .coverage  .coveragerc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
DOCS/: NOTE.md  SCHEMA.md
apps/posts/: apis.py  models.py  selectors.py  serializers.py  services.py  urls.py
apps/posts/migrations/: 0001_initial.py  0002_post_author_post_search_vector_idx_and_more.py  0003_alter_post_id.py  0004_alter_post_id.py
apps/posts/tests/: factories.py  test_apis.py
apps/users/: apis.py  models.py  serializers.py  services.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_id.py  0003_alter_customuser_id.py
config/: settings.py  urls.py
